# docAgent-MCPServer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/core/: logging_config.py
app/dependencies/: __init__.py  llm.py
app/schemas/: __init__.py  compression_schema.py  extract_schema.py  fallback_input.py  file_conversion_schema.py  file_zipper_schema.py  plotter_schema.py  py_runtime_schema.py  summarize_schema.py  translation_schema.py
app/tools/: __init__.py  archiver.py  fallback.py  file_compression.py  file_conversion.py  generate_plot.py  py_runtime.py  text_extractor.py  text_summarizer.py  translator.py
app/utils/: Utils.py
docs/: deployment.md
python_runtime_container_setup/: Dockerfile  entrypoint.sh  test_container.py  watcher.py
